2009-03-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: fixed "Bug
	  480556 - MonoDevelop can't handle UTF-16 source files".

2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorDisplayBinding.cs:
	  Translation fixes. Patch from Kriván Bálint.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.csproj: Flush.

2009-02-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DropDownBox.cs:
	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs: drop down
	  box popup now selects always the current selected item as
	  first item.

2009-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Changed the
	  key for small tooltips (without full names) to shift instead
	  of control. This should now work on all window managers.

2009-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DropDownBox.cs:
	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs:
	* MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs:
	  Changed override Destroy --> override OnDestroyed.

2009-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/DropDownBox.cs:
	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/ClassQuickFinder.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs:
	* MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs:
	  Worked on clean ressource de-allocation.

2009-02-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Assigned ids to tooltip
	  providers.

2009-02-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Don't use
	  the TextEditor from a non-gui thread since this property