@@ -1,3 +1,8 @@
+2009-03-02  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.SourceEditor/SourceEditorView.cs: Properly
+	  implement IEncodedTextContent.
+
 2009-03-02  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.SourceEditor/SourceEditorView.cs: fixed "Bug
